--- a/Menu-digital/package.json
+++ b/Menu-digital/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "setup": "node setup-env.js"
   },
+  "dependencies": {
+    "mongodb": "^6.20.0",
+    "dotenv": "^17.2.3"
+  },
   "devDependencies": {
     "playwright": "^1.56.0"
   }
