--- a/Menu-digital/backend/package.json
+++ b/Menu-digital/backend/package.json
@@ -33,6 +33,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.6.1",
+    "@types/qrcode": "^1.5.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
