--- a/Menu-digital/vercel.json
+++ b/Menu-digital/vercel.json
@@ -1,6 +1,8 @@
 {
   "rewrites": [
-    { "source": "/v1/public/payments/ifthenpay/callback", "destination": "/api/ifthenpay-callback" }
+    { "source": "/v1/public/payments/ifthenpay/callback", "destination": "https://backend-production-348d.up.railway.app/v1/public/payments/ifthenpay/callback" },
+    { "source": "/v1/(.*)", "destination": "https://backend-production-348d.up.railway.app/v1/$1" },
+    { "source": "/public/(.*)", "destination": "https://backend-production-348d.up.railway.app/public/$1" }
   ],
   "headers": [
     {
