chore(vercel): healthcheck em /v1/public/payments/ifthenpay/callback via função serverless e rewrite; desativa Dockerfile no backend

--- a/Menu-digital/vercel.json
+++ b/Menu-digital/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/v1/public/payments/ifthenpay/callback", "has": [ { "type": "query", "key": "healthcheck" } ], "destination": "/api/ifthenpay-healthcheck" },
     { "source": "/v1/public/payments/ifthenpay/callback", "destination": "https://backend-production-348d.up.railway.app/v1/public/payments/ifthenpay/callback" },
     { "source": "/v1/(.*)", "destination": "https://backend-production-348d.up.railway.app/v1/$1" },
     { "source": "/public/(.*)", "destination": "https://backend-production-348d.up.railway.app/public/$1" }
