--- a/vercel.json
+++ b/vercel.json
@@ -5,15 +5,15 @@
     { "source": "/v1/(.*)",      "destination": "https://backend-production-348d.up.railway.app/v1/$1" },
 
     { "source": "/menu/assets/(.*)",   "destination": "https://backend-production-348d.up.railway.app/public/menu/assets/$1" },
-    { "source": "/menu",               "destination": "https://backend-production-348d.up.railway.app/public/menu/" },
-    { "source": "/menu/(.*)",          "destination": "https://backend-production-348d.up.railway.app/public/menu/" },
+    { "source": "/menu",               "destination": "https://backend-production-348d.up.railway.app/public/menu/index.html" },
+    { "source": "/menu/(.*)",          "destination": "https://backend-production-348d.up.railway.app/public/menu/index.html" },
 
     { "source": "/admin/assets/(.*)",  "destination": "https://backend-production-348d.up.railway.app/public/admin/assets/$1" },
-    { "source": "/admin",              "destination": "https://backend-production-348d.up.railway.app/public/admin/" },
-    { "source": "/admin/(.*)",         "destination": "https://backend-production-348d.up.railway.app/public/admin/" },
+    { "source": "/admin",              "destination": "https://backend-production-348d.up.railway.app/public/admin/index.html" },
+    { "source": "/admin/(.*)",         "destination": "https://backend-production-348d.up.railway.app/public/admin/index.html" },
 
     { "source": "/kitchen/assets/(.*)", "destination": "https://backend-production-348d.up.railway.app/public/kitchen/assets/$1" },
-    { "source": "/kitchen",             "destination": "https://backend-production-348d.up.railway.app/public/kitchen/" },
-    { "source": "/kitchen/(.*)",        "destination": "https://backend-production-348d.up.railway.app/public/kitchen/" }
+    { "source": "/kitchen",             "destination": "https://backend-production-348d.up.railway.app/public/kitchen/index.html" },
+    { "source": "/kitchen/(.*)",        "destination": "https://backend-production-348d.up.railway.app/public/kitchen/index.html" }
   ]
 }
