fix(vercel): regra agregada /(menu|admin|kitchen)/(.*) -> /public//index.html para fallback SPA

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,18 @@
 {
   "version": 2,
-  "routes": [
-    { "src": "/public/(.*)",  "dest": "https://backend-production-348d.up.railway.app/public/$1" },
-    { "src": "/v1/(.*)",      "dest": "https://backend-production-348d.up.railway.app/v1/$1" },
+  "rewrites": [
+    { "source": "/public/(.*)",  "destination": "https://backend-production-348d.up.railway.app/public/$1" },
+    { "source": "/v1/(.*)",      "destination": "https://backend-production-348d.up.railway.app/v1/$1" },
 
-    { "src": "/menu/assets/(.*)",   "dest": "https://backend-production-348d.up.railway.app/public/menu/assets/$1" },
-    { "src": "/menu",               "dest": "https://backend-production-348d.up.railway.app/public/menu/index.html" },
-    { "src": "/menu/(.*)",          "dest": "https://backend-production-348d.up.railway.app/public/menu/index.html" },
+    { "source": "/(menu|admin|kitchen)/(.*)", "destination": "https://backend-production-348d.up.railway.app/public/$1/index.html" },
 
-    { "src": "/admin/assets/(.*)",  "dest": "https://backend-production-348d.up.railway.app/public/admin/assets/$1" },
-    { "src": "/admin",              "dest": "https://backend-production-348d.up.railway.app/public/admin/index.html" },
-    { "src": "/admin/(.*)",         "dest": "https://backend-production-348d.up.railway.app/public/admin/index.html" },
+    { "source": "/menu/assets/(.*)",   "destination": "https://backend-production-348d.up.railway.app/public/menu/assets/$1" },
+    { "source": "/menu",               "destination": "https://backend-production-348d.up.railway.app/public/menu/index.html" },
 
-    { "src": "/kitchen/assets/(.*)", "dest": "https://backend-production-348d.up.railway.app/public/kitchen/assets/$1" },
-    { "src": "/kitchen",             "dest": "https://backend-production-348d.up.railway.app/public/kitchen/index.html" },
-    { "src": "/kitchen/(.*)",        "dest": "https://backend-production-348d.up.railway.app/public/kitchen/index.html" }
+    { "source": "/admin/assets/(.*)",  "destination": "https://backend-production-348d.up.railway.app/public/admin/assets/$1" },
+    { "source": "/admin",              "destination": "https://backend-production-348d.up.railway.app/public/admin/index.html" },
+
+    { "source": "/kitchen/assets/(.*)", "destination": "https://backend-production-348d.up.railway.app/public/kitchen/assets/$1" },
+    { "source": "/kitchen",             "destination": "https://backend-production-348d.up.railway.app/public/kitchen/index.html" }
   ]
 }
