--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,19 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/public/(.*)",  "destination": "https://backend-production-348d.up.railway.app/public/$1" },
-    { "source": "/v1/(.*)",      "destination": "https://backend-production-348d.up.railway.app/v1/$1" },
+    { "source": "/public/:path*",  "destination": "https://backend-production-348d.up.railway.app/public/:path*" },
+    { "source": "/v1/:path*",      "destination": "https://backend-production-348d.up.railway.app/v1/:path*" },
 
     { "source": "/menu",               "destination": "https://backend-production-348d.up.railway.app/public/menu/index.html" },
-    { "source": "/menu/assets/(.*)",   "destination": "https://backend-production-348d.up.railway.app/public/menu/assets/$1" },
-    { "source": "/menu/(.*)",         "destination": "https://backend-production-348d.up.railway.app/public/menu/index.html" },
+    { "source": "/menu/assets/:path*", "destination": "https://backend-production-348d.up.railway.app/public/menu/assets/:path*" },
+    { "source": "/menu/:path*",        "destination": "https://backend-production-348d.up.railway.app/public/menu/index.html" },
 
-    { "source": "/admin",              "destination": "https://backend-production-348d.up.railway.app/public/admin/index.html" },
-    { "source": "/admin/assets/(.*)",  "destination": "https://backend-production-348d.up.railway.app/public/admin/assets/$1" },
-    { "source": "/admin/(.*)",        "destination": "https://backend-production-348d.up.railway.app/public/admin/index.html" },
+    { "source": "/admin",               "destination": "https://backend-production-348d.up.railway.app/public/admin/index.html" },
+    { "source": "/admin/assets/:path*", "destination": "https://backend-production-348d.up.railway.app/public/admin/assets/:path*" },
+    { "source": "/admin/:path*",        "destination": "https://backend-production-348d.up.railway.app/public/admin/index.html" },
 
-    { "source": "/kitchen",             "destination": "https://backend-production-348d.up.railway.app/public/kitchen/index.html" },
-    { "source": "/kitchen/assets/(.*)", "destination": "https://backend-production-348d.up.railway.app/public/kitchen/assets/$1" },
-    { "source": "/kitchen/(.*)",       "destination": "https://backend-production-348d.up.railway.app/public/kitchen/index.html" }
+    { "source": "/kitchen",               "destination": "https://backend-production-348d.up.railway.app/public/kitchen/index.html" },
+    { "source": "/kitchen/assets/:path*", "destination": "https://backend-production-348d.up.railway.app/public/kitchen/assets/:path*" },
+    { "source": "/kitchen/:path*",        "destination": "https://backend-production-348d.up.railway.app/public/kitchen/index.html" }
   ]
 }
