--- a/Menu-digital/vercel.json
+++ b/Menu-digital/vercel.json
@@ -1,4 +1,7 @@
 {
+  "redirects": [
+    { "source": "/", "destination": "/menu" }
+  ],
   "rewrites": [
     { "source": "/v1/public/payments/ifthenpay/callback", "has": [ { "type": "query", "key": "healthcheck" } ], "destination": "/api/ifthenpay-healthcheck" },
     { "source": "/public/health", "destination": "https://backend-production-348d.up.railway.app/health" },
