--- a/Menu-digital/vercel.json
+++ b/Menu-digital/vercel.json
@@ -7,6 +7,7 @@
     { "source": "/public/health", "destination": "https://backend-production-348d.up.railway.app/health" },
     { "source": "/v1/public/payments/ifthenpay/callback", "destination": "https://backend-production-348d.up.railway.app/v1/public/payments/ifthenpay/callback" },
     { "source": "/v1", "destination": "https://backend-production-348d.up.railway.app/v1" },
+    { "source": "/v1/", "destination": "https://backend-production-348d.up.railway.app/v1" },
     { "source": "/v1/(.*)", "destination": "https://backend-production-348d.up.railway.app/v1/$1" },
     { "source": "/health", "destination": "https://backend-production-348d.up.railway.app/health" },
     { "source": "/api/ifthenpay-callback", "destination": "https://backend-production-348d.up.railway.app/v1/public/payments/ifthenpay/callback" },
