--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,11 +1,11 @@
 [phases.setup]
-nixPkgs = ["nodejs-18_x"]
+nixPkgs = ["nodejs-22_x"]
 
 [phases.install]
 cmds = ["npm ci --include=dev"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["chmod +x node_modules/.bin/tsc", "npm run build"]
 
 [start]
 cmd = "npm run start"
