--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": "20.x"
+  }
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/mongodb": "^9.0.2",
