--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,10 @@ root = "backend"
 
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm ci && npm run build"
+buildCommand = "npm ci --include=dev && npm run build"
+
+[variables]
+NIXPACKS_NODE_VERSION = "20"
 
 [deploy]
 startCommand = "npm run start"
