--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.install]
-cmds = ["npm ci --include=dev"]
+cmds = ["npm install --include=dev"]
 
 [phases.build]
 cmds = ["chmod +x node_modules/.bin/tsc", "npm run build"]
