--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "node dist/index.js",
     "seed": "ts-node-dev --transpile-only src/seed.ts",
     "test:order": "node test-order.js",
