--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@ root = "backend"
 
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm install --include=dev && npm run build"
+buildCommand = "npm install --include=dev && chmod +x node_modules/.bin/tsc && npm run build"
 
 [variables]
 NIXPACKS_NODE_VERSION = "20"
